tdf#79553 ww8import: line numbering distance is auto, not zero

sprmSDxaLnn:
An XAS_nonNeg that specifies the distance between line numbers and
the lines of text to which they apply. A value of 0 indicates that the
application MUST automatically determine positioning.
By default, the positioning of line numbers is automatically determined.

Change-Id: I35a440a7fa84f315f4a67e201e1a0066d4e4cf73